# Kosha

./: .env.example  ACCEPTANCE_REPORT.md  CONTRIBUTING.md  GATE2_REPORT.md  PREMISE_REPORT.md  README.md  action.yml  pyproject.toml
.docs/: paper-positioning.md  real-model-fidelity-report.md  s2-v3-preregistration.md  s2-v3-report.md
.docs/paper/: citations.md  draft.md  evidence-ledger.md  experiments-and-reproducibility.md  related-work.md  reviewer-objection-matrix.md  submission-package.md  venue-verification.md
.github/workflows/: acceptance.yml  action-smoke.yml  ci.yml  realworld.yml
bundles/northwind/: index.md  log.md
bundles/paper-s2v3-corpus/: MANIFEST.md  index.md
bundles/pydoc-stdlib/: index.md
consumer/: AGENTS.fragment.md
consumer/kosha-traversal/: SKILL.md
docs/: authoring-bundles.md  ci-integration.md  cli-reference.md  configuration.md  docs-impact-policy.md  gate0-status.md  getting-started.md  mcp-integration.md  overview.md  sync.md  system_design.md
docs/examples/: kosha-sync-pr.yml
evals/: test_suite_index.py
evals/contradict/: test_contradict_eval.py
evals/dedup/: test_dedup_eval.py
evals/extract/: test_extract_eval.py
evals/merge/: test_merge_eval.py
evals/paper_s2v3/: maintenance.jsonl  queries.jsonl
evals/realworld/: contradictions_v2.jsonl  maintenance.jsonl  queries.jsonl
evals/relate/: test_relate_eval.py
labels/: contradict_seed.jsonl  dedup_seed.jsonl  granularity_seed.jsonl  merge_seed.jsonl  relate_seed.jsonl
src/kosha/: __init__.py  cli.py  cli_json.py  extract.py  git_store.py  lint.py  model.py  recovery.py  release.py  telemetry.py  validate.py
tests/: conftest.py  test_smoke.py
tests/action/: test_action_yaml.py
tests/approve/: test_itemreview.py  test_queue.py  test_render.py
tests/audit/: test_export.py
tests/bench/: test_acceptance.py  test_calibrate.py  test_gate0_smoke.py  test_gate2_auditability.py  test_gate2_contradictions.py  test_gate2_criterion.py  test_gate2_harness.py  test_gate2_histories.py  test_gate2_measure.py  test_gate2_report.py  test_grade.py  test_labels.py  test_queries.py  test_realworld_corpus.py  test_realworld_promptonly.py  test_realworld_runner.py  test_realworld_status.py  test_report.py  test_runner.py  test_scaled_corpus.py  test_strategies.py
tests/cli/: test_doctor.py  test_evidence_cli.py  test_gap_cli.py  test_ingest_review.py  test_ingest_watch.py  test_json.py  test_recover_cli.py  test_release_cli.py  test_review_queue_cli.py  test_serve_acl.py  test_source_cli.py
tests/connectors/: test_connector_config.py  test_connector_model.py  test_connector_run.py  test_connector_state.py  test_git_connector.py  test_mcp_connector.py
tests/contradiction/: test_detect.py  test_detector_gate.py  test_escalate.py  test_invariant.py  test_policy.py  test_temporal.py
tests/dedup/: test_adjudicate.py  test_audit.py  test_candidates.py  test_decision.py  test_detector_override.py  (+2 more)
(+1007 files in other folders)
