[project]
name = "kosha-okf"
version = "0.1.0"
description = "Auditable OKF governance toolkit — curated knowledge, kept alive."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
]

[project.scripts]
kosha = "kosha.cli:main"
kosha-mcp = "kosha.mcp.server:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
documents = [
    "pypdf>=5.0",
    "python-docx>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kosha"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml>=6.0.12.20260518",
    "mcp>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["docx", "docx.*", "pypdf", "pypdf.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
